--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tem0707.github.io/Netflix-Clone-2024 ",
+  "homepage": "https://tem0707.github.io/Netflix-Clone-2024/",
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
